2003-03-12  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>

	* QParagraph.C (apply): do not reset vfill spacing to 'none' when
	there is no explicit length given (off by one typo)

2003-03-13  John Levon  <levon@movementarian.org>

	* ui/QPrefsDialogBase.ui: resize more sanely

2003-03-12  John Levon  <levon@movementarian.org>

	* QSearch.C: don't disable checkboxes with RO document (bug 937)

2003-03-11  John Levon  <levon@movementarian.org>

	* ui/QPrefUIModule.ui: lastfiles max is really 9

2003-03-06  John Levon  <levon@movementarian.org>
 
 	* QExternalDialog.C: connect Apply
 
2003-03-06  Dekel Tsur  <dekelts@tau.ac.il>

	* qfont_loader.C (available): Rewrite as the old version did not
        work properly.

2003-02-25  John Levon  <levon@movementarian.org>

	From Nathan Weston

	* QBibtexDialogBase.ui:
	* QCharacterDialogBase.ui:
	* QCitationDialogBase.ui:
	* QDocumentDialogBase.ui:
	* QExternalDialogBase.ui:
	* QFloatDialogBase.ui:
	* QMinipageDialogBase.ui:
	* QParagraphDialogBase.ui: fix default button to be OK (bug #921)

2003-02-23  John Levon  <levon@movementarian.org>

	* ui/QParagraphDialogBase.ui: fix dupe accelerator (bug #918)

2003-02-17  John Levon  <levon@movementarian.org>

	* ui/QSpellcheckerDialogBase.ui:
	* QSpellchecker.h:
	* QSpellchecker.C:
	* QSpellcheckerDialog.h:
	* QSpellcheckerDialog.C: reworking

2003-02-17  John Levon  <levon@movementarian.org>

	* ui/QSpellcheckerModule.ui: capitalization fix

2003-02-15  John Levon  <levon@movementarian.org>

	* QPrefs.C: fix accidental confusion between spool command and file extension
	  in printer params prefs

2003-02-15  John Levon  <levon@movementarian.org>

	* ui/BulletsModuleBase.ui:
	* ui/ClassModuleBase.ui:
	* ui/LanguageModuleBase.ui:
	* ui/MarginsModuleBase.ui:
	* ui/NumberingModuleBase.ui:
	* ui/QPrefScreenFontsModule.ui:
	* ui/QPrefsDialogBase.ui: tab ordering fixes

2003-02-09  Juergen Spitzmueller  <j.spitzmueller@gmx.de>
