@@ -193,6 +193,12 @@
                             <string>aspell</string>
                         </property>
                     </item>
+                    <item>
+                        <property>
+                            <name>text</name>
+                            <string>hspell</string>
+                        </property>
+                    </item>
                     <property stdset="1">
                         <name>name</name>
                         <cstring>spellCommandCO</cstring>
