@@ -1,3 +1,8 @@
+2003-03-07  Dekel Tsur  <dekelts@tau.ac.il>
+
+	* QPrefs.C:
+	* QPrefSpellcheckerModule.ui: Add 'hspell' option.
+
 2003-03-12  Jean-Marc Lasgouttes  <lasgouttes@lyx.org>
 
 	* QParagraph.C (apply): do not reset vfill spacing to 'none' when
